integracion de app.modules para poder usar ngModel

--- a/FRONTEND/src/app/components/mensaje/mensaje.component.html
+++ b/FRONTEND/src/app/components/mensaje/mensaje.component.html
@@ -1,15 +1,18 @@
 <div>
-    <h2>Mensajes Recibidos</h2>
-    <ul>
-      <li *ngFor="let mensaje of mensajes">
-        {{ mensaje.contenido }}
-        <button (click)="responderMensaje(mensaje.id, 'Respuesta automática')">Responder</button>
-      </li>
-    </ul>
-    <div>
-      <h3>Nuevo Mensaje</h3>
-      <textarea [(ngModel)]="nuevoMensaje" placeholder="Escribe tu mensaje"></textarea>
-      <button (click)="enviarMensaje()">Enviar</button>
-    </div>
+  <h2>Mensajes Recibidos</h2>
+  <ul>
+    <li *ngFor="let mensaje of mensajes">
+      {{ mensaje.contenido }}
+      <!-- Botón para responder a un mensaje -->
+      <button (click)="responderMensaje(mensaje.id, 'Respuesta automática')">Responder</button>
+    </li>
+  </ul>
+
+  <div>
+    <h3>Nuevo Mensaje</h3>
+    <!-- Campo de texto para escribir un nuevo mensaje -->
+    <textarea [(ngModel)]="nuevoMensaje" placeholder="Escribe tu mensaje"></textarea>
+    <button (click)="enviarMensaje()" [disabled]="!nuevoMensaje">Enviar</button>
   </div>
-  
+</div>
+
